--- a/frontend/src/components/Landing/Landing.css
+++ b/frontend/src/components/Landing/Landing.css
@@ -1,22 +1,46 @@
 body{
-    background-color: azure;
+    background-color: rgb(246, 220, 255);
 }
 
 .landing-container{
     display:flex;
     flex-direction:row;
-    background-color: rgba(0, 0, 0, 0.322);
+    background-color: rgb(209, 121, 226);
     width: 40%;
     height: 100vh;
 }
 
 .text-container h1{
     background-color: rgba(0, 0, 0, 0.26);
-    margin-left: 65%;
+    margin-left: 80px;
     padding:10px;
-    margin-top: 100%;
-    font-size: 50px;
+    margin-top: 325px;
+    margin-bottom: 10px;
+    font-size: 80px;
     width: 100%;
     white-space: nowrap;
+}
+
+.text-container p{
+    font-size: 20px;
+    margin-left: 90px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.26);
+}
+
+.text-container button{
+    font-size: 25px;
+    padding:5px;
+    margin-left: 175px;
+    margin-top: 25px;
+    background-color: rgba(0, 0, 0, 0.26);
+}
+
+.image-container img{
+    margin-left: 400px;
+    margin-top: 100px;
+    width: 750px;
+    height: 750px;
+    border: 2px solid black;
 }
 
