--- a/frontend/src/components/Mainpage/MainPage.css
+++ b/frontend/src/components/Mainpage/MainPage.css
@@ -1,14 +1,8 @@
 body {
-    background:  rgb(246, 220, 255);
-    font-family: Arial, Impact,;
-    display: flex;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
     background-attachment: fixed;
     flex-direction: column;
 }
-.header h1 {
+.mainheader h1 {
     margin-top: 0px;
     margin-bottom: 10px;
     margin-left: 10px;
@@ -20,7 +14,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 60px;
 }
-.header h2 {
+.mainheader h2 {
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 10px;
@@ -32,7 +26,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 30px;
 }
-.header h3 {
+.mainheader h3 {
     margin-right:10px;
     display: flex;
     justify-content: right;
@@ -42,13 +36,13 @@ body {
     font-size: 20px;
 }
 
-.header {
+.mainheader {
     background: rgb(209, 121, 226);
     font-size: 30px;
     width: 100%;
   }
 
-  .footer {
+  .mainfooter {
     background: rgb(209, 121, 226);
     font-size: 30px;
     width: 100%;
