--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -1,17 +1,19 @@
 .sidebar {
-  background-color: rgba(0, 0, 0, 0.26);
-  width: 35%;
+  background-color: rgb(209, 121, 226);
+  width: 40%;
   height:100vh;
+  top:0px;
   white-space: nowrap;
+  position:fixed;
 }
 .sidebar h1 { 
     display: flex;
     align-content:center;
     margin-top:250px;
-    margin-left:250px;
+    margin-left:90px;
     color: rgb(0, 0, 0);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 60px;
+    font-size: 40px;
 }
 
 .sidebar h2 { 
@@ -29,21 +31,22 @@
 }
 
 .space img{
+  margin-left: 800px;
+  margin-top: 100px;
   width: 750px;
   height: 750px;
   border: 2px solid black;
-  float:right;
 }
 
-.loginfooter {
-  background: rgb(209, 121, 226);
-  font-size: 30px;
-  width: 100%;
-  position:absolute;
-  width:100%;
-  bottom:0;
+.login button {
+  margin-top:20px;
+  background-color: rgba(0, 0, 0, 0.26);
+  border: 2px solid black;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  display: inline-block;
+  font-size: 20px;
 }
-
-  
 
 
