--- a/frontend/src/components/Matching/Matching.css
+++ b/frontend/src/components/Matching/Matching.css
@@ -1,8 +1,10 @@
-body {
-    background-attachment: fixed;
-    flex-direction: column;
-}
-.mainheader h1 {
+  .matchingheader {
+    background: rgb(209, 121, 226);
+    font-size: 30px;
+    width: 100%;
+  }
+
+  .matchingheader h1 {
     margin-top: 0px;
     margin-bottom: 10px;
     margin-left: 10px;
@@ -14,7 +16,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 60px;
 }
-.mainheader h2 {
+.matchingheader h2 {
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 10px;
@@ -26,7 +28,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 30px;
 }
-.mainheader h3 {
+.matchingheader h3 {
     margin-right:10px;
     display: flex;
     justify-content: right;
@@ -36,25 +38,28 @@ body {
     font-size: 20px;
 }
 
-.mainheader {
-    background: rgb(209, 121, 226);
-    font-size: 30px;
-    width: 100%;
-  }
-
-  .mainfooter {
+  .matchingfooter {
     background: rgb(209, 121, 226);
     font-size: 30px;
     width: 100%;
     position:absolute;
+    width:100%;
     bottom:0;
   }
 
-  .main button {
-    margin:20px;
-    background-color: rgba(0, 0, 0, 0.26);
+  .matching button {
+    float:left;
+    margin-left:100px;
+    margin-top:100px;
+    width:250px;
+    height:200px;
+    background-color: rgb(255, 255, 255);
     border: 2px solid black;
-    color: white;
-    padding: 15px;
-    font-size: 20px;
+    color: rgb(0, 0, 0);
+    font-size: 40px;
   }
+  
+    
+  
+  
+  
