--- a/frontend/src/components/Matching/Matching.css
+++ b/frontend/src/components/Matching/Matching.css
@@ -47,17 +47,26 @@
     bottom:0;
   }
 
+  .matchingfooter button {
+    margin:20px;
+    background-color: rgba(0, 0, 0, 0.26);
+    border: 2px solid black;
+    color: white;
+    padding: 15px;
+    font-size: 20px;
+  }
+
   .matching button {
     float:left;
     margin-left:100px;
-    margin-top:100px;
+    margin-top:65px;
     width:250px;
     height:200px;
     background-color: rgb(255, 255, 255);
     border: 2px solid black;
     color: rgb(0, 0, 0);
     font-size: 40px;
-  }
+  }  
   
     
   
