--- a/frontend/src/components/Fitb/Fitb.css
+++ b/frontend/src/components/Fitb/Fitb.css
@@ -28,13 +28,20 @@
   height: 100%;
   flex: 2;
 }
+.prompt {
+  font-size: 2rem;
+}
+#successMessage {
+  font-size: 2.5rem;
+  font-weight: 800;
+}
 .fitbquestion {
   display: flex;
   flex: 1;
   flex-direction: column;
   text-align: left;
   padding: 20px;
-  font-size: 30px;
+
   background: rgba(0, 0, 0, 0.26);
   border: 2px solid black;
 }
@@ -62,8 +69,8 @@
   border: 7px solid rgb(0, 0, 0, 0.7);
   border-radius: 10px;
   color: rgb(255, 255, 255, 0.4);
-  padding: 50px;
-  font-size: 2rem;
+  padding: 30px 1rem 30px 1rem;
+  font-size: 1.7rem;
   font-weight: 700;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
   transition: background-color 0.2s ease-in-out, border 0.2s ease-in-out,
@@ -98,18 +105,21 @@
 
 .fitb button {
   background-color: rgba(0, 0, 0, 0.26);
-  border: 2px solid black;
+
   color: white;
   padding: 15px;
   font-size: 20px;
   cursor: pointer;
+  border: 2px solid rgb(255, 255, 255, 0.1);
+  transition: background-color 0.2s ease-in-out;
 }
 
 .fitb button:hover {
-  background-color: rgba(0, 0, 0, 0.26);
-  border: 2px solid black;
+  background-color: rgba(0, 0, 0, 0);
+  border: 2px solid rgb(255, 255, 255, 1);
   color: white;
   padding: 15px;
+  cursor: pointer;
   font-size: 20px;
   cursor: pointer;
 }
@@ -142,11 +152,31 @@
 .error {
   color: red;
 }
-
+.successSection {
+  display: flex;
+  justify-content: space-between;
+}
+.next-question,
+.playAgain {
+  font-size: 1.5rem;
+  background: none;
+  width: 49%;
+  background: rgb(142, 54, 160, 0.4);
+  color: rgb(255, 255, 255, 0.5);
+  transition: background 0.2s ease-in-out, color 0.2s ease-in-out;
+}
+.playAgain {
+  padding: 1rem 0 1rem 0;
+}
 .next-question {
-  text-decoration: none;
-  color: #8e36a0;
+}
+.next-question:hover,
+.playAgain:hover {
+  background: rgb(142, 54, 160, 1);
+  color: rgb(255, 255, 255, 1);
+  cursor: pointer;
 }
 .next-question:hover {
-  text-decoration: underline;
+}
+.playAgain:hover {
 }
