--- a/frontend/src/components/Signup/Signup.css
+++ b/frontend/src/components/Signup/Signup.css
@@ -8,51 +8,70 @@
 
 .left-bar h1 {  
     background-color: rgba(0, 0, 0, 0.26);
-    margin-top:200px;
-    margin-left:250px;
-    color: rgb(0, 0, 0);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 60px;
+    margin-left: 2vw;
     padding:10px;
-    width: 50%;
-    white-space: nowrap;
+    margin-top: 20vh;
+    margin-bottom: 10px;
+    font-size: 60px;
+    width:35vw;
 }
 
 .labelbox label {
-    margin-left: 46%;
+    margin-left: 4vw;
     font-size: 20px;
     color: rgb(29, 0, 48);
 }
 
 .labelbox input {
-    width:40%;
+    width:250px;
     height: 20px;
-    margin-bottom: 10px;
-    margin-left: 46%;
+    margin-left: 75px;
 }
 
 .buttonsection{
-    margin-top: 25px;
-    flex-direction: row;
-    display:flex;
+    display:inline;
 }
 
 .buttonsection button{
-    width:150px;
+    background-color: rgba(0, 0, 0, 0.26);
+    border: 2px solid black;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-size: 24px;
+    width: 200px;
+    margin-left: 4vw;
+    margin-bottom: 1vw;
+}
+
+.buttonsection button:hover {
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid rgb(255, 255, 255, 1);
+    color: white;
+    padding: 15px;
+    cursor: pointer;
+    font-size: 20px;
+    cursor: pointer;
+  }
+
+.signup-image img{
+    margin-left: 35%;
+    margin-top: 15%;
+    width: 75vh;
+    height: 75vh;
+}
+
+.language {
+    height:100px;
+    margin-left: 75px;
+}
+.language select {
+    width:220px;
     height: 40px;
     margin-top: 20px;
-    margin-left: 40%;
     font-size: 20px;
     background-color: rgba(0, 0, 0, 0.26);
     border: 2px solid black;
     color: white;
-}
-
-.signup-image img{
-    margin-left: 444px;
-    margin-top: 100px;
-    width: 750px;
-    height: 750px;
-    border: 2px solid black;
 }
 
